--- a/Visuals/MainWindow.xaml
+++ b/Visuals/MainWindow.xaml
@@ -1,12 +1,26 @@
-﻿<Window x:Class="Visuals.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Visuals"
+        xmlns:Controller="clr-namespace:Controller;assembly=Controller" x:Class="Visuals.MainWindow"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid Background="#FF17A873">
-        <Image x:Name="TrackImage" Margin="10,10,10,10" />
+        <Grid.DataContext>
+            <local:DataContext/>
+        </Grid.DataContext>
+        <DockPanel>
+            <Menu DockPanel.Dock="Top" Height="20" VerticalAlignment="Top" >
+                <MenuItem Header="Menu">
+                    <MenuItem Header="Competition Stats" Click="OnCompetitionStatsOpen"/>
+                    <MenuItem Header="Race Stats" Click="OnRaceStatsOpen"/>
+                    <MenuItem Header="Exit" Click="OnExit"/>
+                </MenuItem>
+            </Menu>
+        </DockPanel>
+        <Image x:Name="TrackImage" Margin="0,20,0,0" />
+        <Label Content="{Binding TrackName, Mode=OneWay}" Margin="10,26,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="111" FontWeight="Bold"/>
     </Grid>
 </Window>
